# SPDX-FileCopyrightText: 2022 Jonah Brüchert <jbb@kaidan.im>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "erika_3004"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdrascii_codec = { version = "*", path = "../gdrascii_codec" }
serial = "0.4"
num_enum = { version = "0.5", default-features = false }
