# SPDX-FileCopyrightText: 2022 Jonah Brüchert <jbb@kaidan.im>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "erika-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erika_3004 = { version = "*", path = "../erika_3004" }
gdrascii_codec = { version = "*", path = "../gdrascii_codec" }
clap = { version = "3", default-features = false, features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.23", default-features = false }
uinput = { default-features = false, git = "https://github.com/jbbgameich/rust-uinput", branch = "clippy" }
